--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,7 +32,7 @@ nav {
 .main{
 	width: 100%;
 	height: calc(100% - 60px);
-	background:url("../img/парень.png") 90% 100%/auto 85% no-repeat , url("../img/фон.png") center/cover no-repeat;
+	background:url("../img/Парень.png") 90% 100%/auto 85% no-repeat , url("../img/фон.jpg") center/cover no-repeat;
 }
 
 .title_container{
@@ -124,7 +124,7 @@ nav {
 .i_can{
 	width: 100%;
 	height: 80%;
-	background: url("../img/картинка фона.png") center/cover no-repeat;	 
+	background: url("../img/картинка фона.jpg") center/cover no-repeat;	 
 }
 
 
@@ -294,7 +294,7 @@ nav {
 .statistics{
 	width: 100%;
 	height: 50%;
-	background: url("../img/фон2.png") center/cover no-repeat;
+	background: url("../img/фон2.jpg") center/cover no-repeat;
 	margin-top:150px; 
 }
 
@@ -363,7 +363,7 @@ nav {
 .my_contacts {
 	width: 100%;
 	height: 100%;
-	background: url("../img/фон3.png") center/cover no-repeat;
+	background: url("../img/Фон3.jpg") center/cover no-repeat;
 }
 .inform_7 {
 	text-align: center;
